Day 1/gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "lab1"
  }
}
